finished part 1 of Smile

--- a/static/index.html
+++ b/static/index.html
@@ -10,21 +10,104 @@
 <body>
         <header>
                 <!-- FINISH ME: add the logo here -->
-                <div class="create">
-                    <!-- FINISH ME: add a link to the create page -->
+                <div class="logo">
+                    <img src="images/logo.png">
                 </div>
+                <a href="create.html" class="my-button">
+                    <div class="create">
+                        <!-- FINISH ME: add a link to the create page -->
+                        Share a smile!
+                    </div>
+                </a>
         </header>
-        <section class="mainbody smiles">
+        <div class="mainbody">
+            <section class="mainbody-smiles">
                 <!-- FINISH ME: create 3 smile posts -->
                 <article class="smile">
-                     Add HTML for the post elements: title, level, etc., as per instructions.
+                     <!-- Add HTML for the post elements: title, level, etc., as per instructions. -->
+                     <div class="title">
+                        Title1
+                    </div>
+                    <div class="happiness-level-col">
+                        <div class="happiness-level-1">
+                            <!-- <img src="images/happiness-level.png"> -->
+                        </div>
+                    </div>
+                    <div class="story-col">
+                        <div class="story">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                        </div>
+                    </div>
+                    <div class="like-col">
+                        <button class="like">
+                            <img src="images/heart.png">
+                        </button>
+                        <div class="count">
+                            14792834
+                        </div>
+                    </div>
+                    <div class="timestamp">
+                        Posted at 1:03pm May 22, 2015
+                    </div>
                 </article>
-                <article class="smile">
-                     Add HTML for the post elements: title, level, etc., as per instructions.
+
+                                <article class="smile">
+                     <!-- Add HTML for the post elements: title, level, etc., as per instructions. -->
+                     <div class="title">
+                        Title1
+                    </div>
+                    <div class="happiness-level-col">
+                        <div class="happiness-level-2">
+                            <!-- <img src="images/happiness-level.png"> -->
+                        </div>
+                    </div>
+                    <div class="story-col">
+                        <div class="story">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                        </div>
+                    </div>
+                    <div class="like-col">
+                        <button class="like">
+                            <img src="images/heart.png">
+                        </button>
+                        <div class="count">
+                            14792834
+                        </div>
+                    </div>
+                    <div class="timestamp">
+                        Posted at 1:03pm May 22, 2015
+                    </div>
                 </article>
-                <article class="smile">
-                     Add HTML for the post elements: title, level, etc., as per instructions.
+
+                                <article class="smile">
+                     <!-- Add HTML for the post elements: title, level, etc., as per instructions. -->
+                     <div class="title">
+                        Title1
+                    </div>
+                    <div class="happiness-level-col">
+                        <div class="happiness-level-3">
+                            <!-- <img src="images/happiness-level.png"> -->
+                        </div>
+                    </div>
+                    <div class="story-col">
+                        <div class="story">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                        </div>
+                    </div>
+                    <div class="like-col">
+                        <button class="like">
+                            <img src="images/heart.png">
+                        </button>
+                        <div class="count">
+                            14792834
+                        </div>
+                    </div>
+                    <div class="timestamp">
+                        Posted at 1:03pm May 22, 2015
+                    </div>
                 </article>
-     </section>
+
+         </section>
+     </div>
 </body>
 </html>
