--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/png" href="images/favicon.png">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
+        <script src="scripts/jquery.min.js"></script>
+        <script type="text/javascript" src="scripts/smiles.js"></script>
+        <script type="text/javascript">
+            // This is a jQuery convention to say that once all the files
+            // load, the function Smile.start() should run.
+            // This function is defined in the smiles.js
+            $(function() {
+                Smile.start();
+            });
+        </script>
 </head>
 <body>
         <header>
@@ -13,15 +23,29 @@
                 <div class="logo">
                     <img src="images/logo.png">
                 </div>
-                <a href="create.html" class="my-button">
-                    <div class="create">
-                        <!-- FINISH ME: add a link to the create page -->
+                <div class="create" >
+                    <!-- FINISH ME: add a link to the create page -->
+                    <a href="create.html" class="my-button">
                         Share a smile!
-                    </div>
-                </a>
+                    </a>
+                   <form method="get" action="index.html" id="create_form">
+                    <input type="text" placeholder="Title" class="title-input" name="title" id="create_form_title"/>
+                    <input type="textArea" placeholder="Share a smile..." class="story-input" name="story" rows="8" cols="50" id="create_form_story"/>
+                    <label for="happiness-level">How happy did this make you?</label>
+                    <select class="happiness-level-input" name="happiness-level" id="happiness-level">
+                        <option value="1">Happy</option>
+                        <option value="2">Very Super Happy</option>
+                        <option value="3">So Ecstatic I Can't Stop Smiling</option>
+                    </select>
+                    <div class="cancel-post">
+                    <input type="submit" class="submit-input" value="Post">
+                    <a href="index.html" class="cancel">Cancel</a>
+                    <!-- FINISH ME: add the rest of the form fields -->
+                   </form>
+                </div>
         </header>
         <div class="mainbody">
-            <section class="mainbody-smiles">
+            <section class="smiles">
                 <!-- FINISH ME: create 3 smile posts -->
                 <article class="smile">
                      <!-- Add HTML for the post elements: title, level, etc., as per instructions. -->
@@ -29,7 +53,7 @@
                         Title1
                     </div>
                     <div class="happiness-level-col">
-                        <div class="happiness-level-1">
+                        <div id="happiness-level" class="happiness-level-1">
                             <!-- <img src="images/happiness-level.png"> -->
                         </div>
                     </div>
@@ -51,61 +75,6 @@
                     </div>
                 </article>
 
-                                <article class="smile">
-                     <!-- Add HTML for the post elements: title, level, etc., as per instructions. -->
-                     <div class="title">
-                        Title1
-                    </div>
-                    <div class="happiness-level-col">
-                        <div class="happiness-level-2">
-                            <!-- <img src="images/happiness-level.png"> -->
-                        </div>
-                    </div>
-                    <div class="story-col">
-                        <div class="story">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                        </div>
-                    </div>
-                    <div class="like-col">
-                        <button class="like">
-                            <img src="images/heart.png">
-                        </button>
-                        <div class="count">
-                            14792834
-                        </div>
-                    </div>
-                    <div class="timestamp">
-                        Posted at 1:03pm May 22, 2015
-                    </div>
-                </article>
-
-                                <article class="smile">
-                     <!-- Add HTML for the post elements: title, level, etc., as per instructions. -->
-                     <div class="title">
-                        Title1
-                    </div>
-                    <div class="happiness-level-col">
-                        <div class="happiness-level-3">
-                            <!-- <img src="images/happiness-level.png"> -->
-                        </div>
-                    </div>
-                    <div class="story-col">
-                        <div class="story">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-                        </div>
-                    </div>
-                    <div class="like-col">
-                        <button class="like">
-                            <img src="images/heart.png">
-                        </button>
-                        <div class="count">
-                            14792834
-                        </div>
-                    </div>
-                    <div class="timestamp">
-                        Posted at 1:03pm May 22, 2015
-                    </div>
-                </article>
 
          </section>
      </div>
